[gd_scene load_steps=9 format=2]

[ext_resource path="res://Effects/MasterEffect/MasterEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects/PasteEffect/PasteEffect.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, -980, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.2
angular_velocity = 0.0191222
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 980, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.2
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_curve = SubResource( 5 )

[node name="MasterEffect" instance=ExtResource( 1 )]

[node name="Parent" type="Node2D" parent="." index="0"]
script = ExtResource( 2 )

[node name="LeftSpark" type="Particles2D" parent="Parent" index="0"]
modulate = Color( 1, 0.819608, 0, 1 )
rotation = -2.35619
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="RightSpark" type="Particles2D" parent="Parent" index="1"]
modulate = Color( 1, 0.820313, 0, 1 )
rotation = -0.261799
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="Timer" type="Timer" parent="." index="1"]
autostart = true
[connection signal="on_setup_done" from="." to="Parent" method="on_setup_done"]
[connection signal="timeout" from="Timer" to="." method="queue_free"]
